Alter maven build