@@ -1,6 +1,5 @@
 #! groovy
-withEnv(["PATH+MAVEN=${tool(CFG.'maven.tool_version' ?: 'Maven 3')}/bin"]) {
-    def settings = CFG.'maven.settings_path' ? "-s '${CFG.'maven.settings_path'}'" : ''
+withMaven(jdk: CFG.jdk, maven: 'maven') {
     sh """mvn -version"""
-    sh """mvn -B ${settings} -DargLine='-Xmx1024m -XX:MaxPermSize=1024m' clean install"""
+    sh """mvn -B -V clean install"""
 }
